# rwr-gfl-weapon-parser

./: .gitignore  Cargo.toml  README.md  template.txt  template.weapon
src/: LICENSE  decode.rs  lib.rs  main.rs  model.rs  parse.rs
