[package]
name = "rwr_gfl_weapon_parser"
version = "0.13.0"
edition = "2021"
authors = ["Kreedzt"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serde = { version = "1.0.132", features = ["derive"] }
chrono = "0.4"
csv = "1.1"
encoding_rs = "0.8.30"
structopt = { version = "0.3", default-features = false }
quick-xml = { version = "0.22.0" }
indicatif = "0.16.2"
regex = "1.5.5"
anyhow = "1.0.57"
